A couple of layout tweaks, hopefully @aefaradien's double-scrollbar issue should be gone now.

--- a/default.css
+++ b/default.css
@@ -255,6 +255,9 @@ img {
 }
 
 #addcolumndiv li input {
+    position:relative;
+    top:-7px;
 	margin:0px;
 	padding:0px;
+	width:20px;
 }
